Styling fixes for radius search filter for responsive, make it usable on mobile.

--- a/media/com_fabrik/css/fabrik.css
+++ b/media/com_fabrik/css/fabrik.css
@@ -651,3 +651,41 @@ form.fabrikForm label.checkbox,
 form.fabrikForm label.radio {
 	cursor: pointer;
 }
+
+/** radius search responsive **/
+
+@media only screen and (max-device-width: 499px)
+{
+.fabrikWindow.modal {
+	max-width:100% !important;
+	left:0 !important;
+}
+ 
+.fabrikWindow.modal .contentWrapper {
+	max-width:100% !important;
+} 
+
+.fabrikWindow .radius_search table.radius_table {
+	table-layout:fixed;
+	max-width:100%;
+} 
+
+.fabrikWindow .radius_search table.radius_table td:first-child {
+	width:70px;
+}
+
+.radius_search_geocode_map {
+	width:300px;
+	height:275px;
+	margin-top:15px;
+}
+}
+
+@media only screen and (min-device-width: 500px)
+{
+.radius_search_geocode_map {
+	width:400px;
+	height:275px;
+	margin-top:15px;
+}
+}
